2001-03-29  Gray Watson  <gray@outside.256.com>

	* Fixed some additional problems with start-file, start-count, and
	interval.

2001-03-28  Gray Watson  <gray@outside.256.com>

	* Added the 'How It Works' section to the manual.

	* Removed necessity of strcat.

	* Removed use of strcpy internally.

	* Fixed problem with use of start-count and start-file not
	disabling the check-heap flag.

Mon Feb 26 12:17:25 2001  Gray Watson  <gray@whopper.be.256.com>

	* Releasing dmalloc version 4.8.2.

	* Installed new configure script to remove C++ requirement.

Sun Feb 25 18:58:37 2001  Gray Watson  <gray@whopper.be.256.com>

	* Making major changes to a number of routines.

Thu Feb 22 19:24:38 2001  Gray Watson  <gray@whopper.be.256.com>

	* Added more information to heap-check error messages on freed
	memory overwritten.  This is now possible since I unrolled the
	unions from chunk_loc.h.  Thanks to Robert Nielsen for pointing
	out this oversite.

Wed Feb 21 20:16:32 2001  Gray Watson  <gray@whopper.be.256.com>

	* Added strings to identify if the library was compiled with
 	LOCK_THREADS enabled.

Thu Nov 30 19:01:10 2000  Gray Watson  <gray@whopper.be.256.com>

	* Added heap checking when we shutdown if check-blank is enabled.
	This will verify that all of the freed memory was not overwritten.

Mon Nov 27 19:01:10 2000  Gray Watson  <gray@whopper.be.256.com>

	* Added a separate ALLOC_BLANK_CHAR and FREE_BLANK_CHAR to the
	settings.dist file.  Now the default 0xc5 character has been
	replaced with 0xda for dmalloc-allocated memory and 0xdf for
	dmalloc-freed memory.

Tue Nov 14 15:09:02 2000  Gray Watson  <gray@whopper.be.256.com>

	* Releasing dmalloc version 4.8.1.

	* Added --enable-shlib to configure which enables the building of
	shared libraries.

	* Added autoconf handling of the shlibdir for installing of shared
	libraries.

Mon Nov 13 10:47:21 2000  Gray Watson  <gray@whopper.be.256.com>

	* Added improvements to the shared library creation in the Makefile.
